# DSView

./: CMakeLists.txt
.github/workflows/: build-windows-release.yml
CMake/: stage_build_dir.cmake.in
DSView/pv/: appcontrol.cpp
cli/: CLAUDE.md  CMakeLists.txt  README.md  dsview_cli.c  dsview_cli_sources.cmake  dsview_mcp.py  requirements.txt  stage_build_dir_cli.cmake.in
cli/command/: capture_run.c  command_internal.h  decode_run.c  export_run.c  get_run.c  main.c  option_state.h  options.c  parse.c  parse.h  scan_run.c  set_run.c  shape.c  shape.h  show_run.c
cli/decode/: export.c  export.h  feed.c  runtime.c  runtime.h  runtime_internal.h  stack.c  stack_plan.c  stack_plan.h  stack_runtime.h  summary.c  summary.h
cli/device/: device_config.c  device_config.h  device_selected.c  device_selected.h
cli/runtime/: runtime_layout.c  runtime_layout.h
cli/source/: channel_selection_state.c  channel_selection_state.h  logic_source.c  logic_source.h
cli/support/: command_result.h  command_result_json.c  json.c  json.h
cli/tests/: channel_selection_state_test.c  command_shape_test.c  contract.py  decode_export_test.c  decode_stack_plan_test.c  decode_summary_test.c  device_config_test.c  libsigrok_parse_stubs.c  libsigrok_waveform_archive_stubs.c  libsigrokdecode_decoder_list_stubs.c  srzip_session_conversion_test.c  waveform_archive_output_test.c
cli/waveform/: dsl_layout.h  session_metadata.c  session_metadata.h  srzip_session_conversion.c  srzip_session_conversion.h  waveform_archive_output.c  waveform_archive_output.h  waveform_archive_output_dsl.c  waveform_archive_output_internal.h  waveform_archive_output_none.c  waveform_archive_output_srzip.c  waveform_session.c  waveform_session.h
doc/: prd-decode-time-range.md
libsigrok4DSL/hardware/DSL/: dscope.c  dsl.c  dslogic.c
